--- a/income.html
+++ b/income.html
@@ -66,10 +66,8 @@
 				<h4>Annual income from this source: $ {{thisSubtotal}}</h4>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-lg-4 col-lg-offset7 col-md-6 col-md-offset-6 col-sm-6 col-sm-offset-6 col-xs-9 col-xs-offset-3">
+		<div class="row submit-button">
 				<button type="submit" class="btn btn-primary" id="add-button">Add This Income</button>
-			</div>
 		</div>
 		</div>
 		</fieldset>
